--- a/FOR ME/for.html
+++ b/FOR ME/for.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
+    <link rel="stylesheet" href="for.css">
+    <title>form</title>
+</head>
+
+<body>
+    
+    <div class="nav">
+        <div class="col" id="logo">
+            <h4>LOGO</h4>
+        </div>
+        <div class="col">
+            <h3>STUDENT INFORMATION SYSTEM</h3>
+        </div>
+        <div class="col" id="links">
+            <a href="">Home</a>
+            <a href="">Log in</a>
+        </div>
+
+    </div>
+        <div class="card">
+            <div class="card-body">
+                <section class="box">
+                    <form action="" method="submit">
+                        <input type="text" name="Username" placeholder="Username" required>
+                        <input type="text" name="Address" placeholder="Address"  required>
+                        <input type="Email" name="email" placeholder="Email"  required>
+                        <input type="password" name="pwd" placeholder="Password"  required>
+                        <input type="password" name="pwd2" placeholder="Confirm password"  required>
+                        <input type="submit" class="btn" value="Register"><br><br>
+                        
+                        <h1 class="nap">Already have an account? <a href="">login</a> privacy</h1>
+                    </form>
+            </div>
+        </div>
+   </section>
+
+   <div class="footer">
+       <p class="coll">copyright All right reserved</p>
+   </div>
+</body>
+</html>
